service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blue
spec:
  type: NodePort
  ports:
  - name: http
    nodePort: 30081
    port: 8080
  selector:
    app: webapp-blue
