service-red.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-red
  namespace: red
spec:
  type: NodePort
  ports:
  - name: http
    nodePort: 30082
    port: 8080
  selector:
    app: webapp-red
