ingress-red.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-ingress
  namespace: red
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/red"
        backend:
          service:
            name: service-red
            port:
              number: 8080
